Edit modal from Details Page correctly displayed in relation to location map using z-index.

--- a/components/Admin/Details/DetailsPlate/DetailsPlate.module.css
+++ b/components/Admin/Details/DetailsPlate/DetailsPlate.module.css
@@ -50,6 +50,7 @@
 
 .location {
   margin-bottom: 32px;
+  z-index: 0;
 }
 
 .pagination {
